# xyworld

./: CMakeLists.txt  CMakeSettings.json  README.md
assets/spritesheets/: george.spt
cmake/modules/: FindXYGINEXT.cmake
include/: CMakeLists.txt  Commands.hpp  George.hpp  Input.hpp  Physics.hpp  States.hpp  TerrainChunk.hpp  TerrainRenderer.hpp  Velocity.hpp  WorldState.hpp
src/: CMakeLists.txt  Game.cpp  George.cpp  Input.cpp  Physics.cpp  TerrainRenderer.cpp  WorldState.cpp
